<resources>
    <string name="__current">" - Current"</string>
    <string name="__from">"\n\nFROM:   "</string>
    <string name="__pending">"------------- Pending: "</string>
    <string name="_and">"\n and "</string>
    <string name="_continue">Continue</string>
    <string name="_fixed_">\n*Fixed*</string>
    <string name="_for_">" for "</string>
    <string name="_From_">" from "</string>
    <string name="_pending">"  *pending* "</string>
    <string name="_remaining">" remaining"</string>
    <string name="_to">"\nTO:   "</string>
    <string name="_to_">" To "</string>
    <string name="_years">" years"</string>
    <string name="account_info">Account Info</string>
    <string name="account_name">Account Name </string>
    <string name="account_number_or_description">Account Number or Description</string>
    <string name="account_number_or_reference">Account Number or Reference </string>
    <string name="account_type">Account Type </string>
    <string name="account_type_details">account type details</string>
    <string name="accounts">Accounts</string>
    <string name="add">Add</string>
    <string name="accounts_help">Accounts Help</string>
    <string name="add_a_new_account">Add a new Account</string>
    <string name="add_a_new_account_type">Add a new Account Type</string>
    <string name="add_a_new_budget_item">Add a new Budget Item</string>
    <string name="add_account">Add account</string>
    <string name="add_a_new_transaction">Add a new Transaction</string>
    <string name="add_a_new_transaction_based_on_the_budget_rule">Add a new Transaction based on the Budget Rule</string>
    <string name="add_account_type">Add Account Type</string>
    <string name="add_an_unscheduled_transaction">Add an Unscheduled transaction</string>
    <string name="add_budget_rule">Add Budget Rule</string>
    <string name="adjust_the_projections_for_this_item">ADJUST the projections for this item.</string>
    <string name="all_items_regardless_of_account">All Items Regardless of Account</string>
    <string name="all_items">All Items</string>
    <string name="allow_transactions_pending">Allow transactions pending</string>
    <string name="amount">Amount</string>
    <string name="analysis">Analysis</string>
    <string name="analysis_view_help">Analysis View Help</string>
    <string name="annual_budget">Annual Budget</string>
    <string name="annually_every">"Annually every "</string>
    <string name="app_name">Bills Projection</string>
    <string name="applying_the_amount_of">"\napplying the amount of "</string>
    <string name="are_you_sure_you_want_to_delete">"Are you sure you want to delete "</string>
    <string name="are_you_sure_you_want_to_delete_this_account">"Are you sure you want to delete this account? "</string>
    <string name="are_you_sure_you_want_to_delete_this_account_type">Are you sure you want to delete this Account Type?</string>
    <string name="are_you_sure_you_want_to_delete_this_budget_item">Are you sure you want to delete this budget item?</string>
    <string name="are_you_sure_you_want_to_delete_this_budget_rule">Are you sure you want to delete this budget rule?</string>
    <string name="are_you_sure_you_want_to_delete_this_transaction">Are you sure you want to delete this Transaction?</string>
    <string name="are_you_sure_you_want_to_rename_this_account">"Are you sure you want to rename this Account?\n "</string>
    <string name="are_you_sure_you_want_to_rename_this_account_type">"Are you sure you want to rename this Account Type?\n "</string>
    <string name="asset_account">Asset Account</string>
    <string name="automatic">Automatic</string>
    <string name="automatic_payment">Automatic Payment</string>
    <string name="available_credit">Available Credit</string>
    <string name="average">Average </string>
    <string name="average_per_month">average/Month </string>
    <string name="backspace"><![CDATA[<<]]></string>
    <string name="balance">Balance </string>
    <string name="balance_in_account">Balance in Account</string>
    <string name="balance_owing">Balance Owing </string>
    <string name="balance_owing_will_be_calculated">Balance owing will be calculated\n</string>
    <string name="balance_will_be_updated">Balance will be updated</string>
    <string name="berstyle">berStyle</string>
    <string name="blank" />
    <string name="budget_description">Budget Description</string>
    <string name="rules">Rule</string>
    <string name="budget_rule_help">Budget Rule Help</string>
    <string name="budget_rule_info">Budget Rule Info</string>
    <string name="budget_rule_name">Budget Rule Name</string>
    <string name="budget_rules">Budget Rules</string>
    <string name="budget_rules_are_used_to_update_the_budget">Budget Rules are used to update the budget.</string>
    <string name="budget_updated">Budget updated</string>
    <string name="update_results">Update Results</string>
    <string name="ok">OK</string>
    <string name="sync_with_cloud">Sync with Cloud</string>
    <string name="more_options">More Options</string>
    <string name="view_budget_summary">View Budget Summary</string>
    <string name="budget_view">Budget</string>
    <string name="budget_view_help">Budget View Help</string>
    <string name="budgeted">Budgeted </string>
    <string name="budgeted_">"Budgeted: "</string>
    <string name="budgeted_amount">Budgeted Amount</string>
    <string name="budgeted_expenses">Scheduled Expenses</string>
    <string name="calculate_owing">Calculate Owing</string>
    <string name="calculator">Calculator</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_now">Cancel Now</string>
    <string name="cancel_this_projected_item">CANCEL this projected item.</string>
    <string name="category">Category </string>
    <string name="choose_a_budget_asset">Choose a budget Asset</string>
    <string name="choose_a_budget_rule">Choose a Budget Rule</string>
    <string name="choose_a_budget_rule_or_account">Choose a Budget rule or Account</string>
    <string name="choose_a_pay_day">Choose a pay day</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="choose_an_account">choose an Account</string>
    <string name="choose_an_account_type">Choose an Account Type</string>
    <string name="choose_an_action">Choose an Action</string>
    <string name="choose_an_action_for">"Choose an action for "</string>
    <string name="choose_date_range">Choose Date Range</string>
    <string name="choose_the_end_date">Choose the end date</string>
    <string name="choose_the_final_date">Choose the final date</string>
    <string name="choose_the_first_date">Choose the first date</string>
    <string name="choose_the_projected_date">Choose the Projected Date</string>
    <string name="choose_the_start_date">Choose the start date</string>
    <string name="choose_transaction_date">Choose transaction date</string>
    <string name="clear_1">C</string>
    <string name="clear_all">CA</string>
    <string name="complete_now">Complete Now</string>
    <string name="complete_the_pending_amount_of">"Complete the pending amount of "</string>
    <string name="complete_this_pending_transaction">Complete this pending transaction</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_cancelling_budget_item">"Confirm Cancelling Budget Item "</string>
    <string name="confirm_completing_transaction">Confirm Completing transaction</string>
    <string name="confirm_performing_transaction">Confirm performing transaction</string>
    <string name="create_a_scheduled_item_for">Create a scheduled item for</string>
    <string name="create_a_scheduled_item_with_this_budget_rule">Create a scheduled item with this Budget Rule</string>
    <string name="credit_average">Credit Average</string>
    <string name="credit_limit">Credit Limit </string>
    <string name="credit_of">Credit of </string>
    <string name="credits">Credits</string>
    <string name="credits_">"Credits: "</string>
    <string name="current_budget_summary">Current Budget Summary</string>
    <string name="date">Date</string>
    <string name="date_range">Date Range</string>
    <string name="days_before_due_date">Days before due date</string>
    <string name="debit_average">Debit Average</string>
    <string name="debits">Debits</string>
    <string name="debits_">"Debits: "</string>
    <string name="default_web_client_id">460339349167-sam5237fckel7qjbsar8b0ekfodoij2j.apps.googleusercontent.com</string>
    <string name="deficit_of">"DEFICIT of "</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account?</string>
    <string name="delete_account_type">Delete Account Type?</string>
    <string name="delete_budget_item">Delete Budget Item</string>
    <string name="delete_budget_rule">Delete Budget Rule</string>
    <string name="delete_future_predictions">Clear future predictions</string>
    <string name="delete_this_account">Delete this Account</string>
    <string name="delete_this_budget_rule">Delete this Budget Rule</string>
    <string name="delete_this_pending_transaction">Delete this pending transaction</string>
    <string name="delete_this_transaction">Delete this transaction</string>
    <string name="deleted">"      **DELETED**"</string>
    <string name="description">Description</string>
    <string name="discretionary_">"Discretionary: "</string>
    <string name="discretionary_expenses">Discretionary Expenses</string>
    <string name="display_as_asset">Display as asset</string>
    <string name="display_in_budget">Display in Budget</string>
    <string name="divide">/</string>
    <string name="document_content">Document Content</string>
    <string name="download">Download</string>
    <string name="edit_this_account">Edit this Account</string>
    <string name="edit_this_transaction">Edit this transaction</string>
    <string name="editing_is_not_allowed_right_now">Editing is not allowed right now</string>
    <string name="eight">8</string>
    <string name="end_date">End Date</string>
    <string name="enter_a_name_for_this_account_type">Enter a name for this Account Type</string>
    <string name="enter_a_unique_name_for_this_account_type">Enter a unique Name for this Account Type</string>
    <string name="enter_budgeted_amount">Enter Budgeted Amount</string>
    <string name="enter_criteria">Enter Criteria</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="equals_spaced">" ="</string>
    <string name="error">"     Error!!\n"</string>
    <string name="file_title">File Title</string>
    <string name="first_date">First Date</string>
    <string name="five">5</string>
    <string name="fixed">Fixed</string>
    <string name="fixed_">"Fixed: "</string>
    <string name="four">4</string>
    <string name="from_account_name">From Account Name</string>
    <string name="keep_totals">Keep Totals</string>
    <string name="minus">-</string>
    <string name="negation">+/-</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="period">.</string>
    <string name="plus">+</string>
    <string name="results">Result</string>
    <string name="settings">Settings</string>
    <string name="font_size">Font Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="times">X</string>
    <string name="to_account_name">To Account Name</string>
    <string name="transactions">Transactions</string>
    <string name="transfer_result">transfer result</string>
    <string name="two">2</string>
    <string name="zero_digit">0</string>
    <string name="zero_dollars">$0.00</string>
</resources>