<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.calc.CalculatorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDisplay"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/Large_margin"
                android:text="@string/zero_digit"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvResults"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/results"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDisplay" />

            <GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:rowCount="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvResults">

                <Button
                    android:id="@+id/btn7"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/seven"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/eight"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/nine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/black"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/divide"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnBackspace"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/deep_red"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/backspace"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/four"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/five"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/six"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnTimes"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/black"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/times"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/deep_red"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/clear_1"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/two"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/three"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/black"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/minus"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnClearAll"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/deep_red"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/clear_all"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnPeriod"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/period"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn0"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/zero_digit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/btnNegative"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/white"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/negation"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/black"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/plus"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEqual"
                    android:layout_margin="@dimen/normal_margin"
                    android:backgroundTint="@color/deep_red"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/equals_spaced"
                    android:textSize="@dimen/text_size_calc"
                    android:textStyle="bold" />

            </GridLayout>

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/transfer_result"
                android:textSize="@dimen/text_size_calc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grid_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>