<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvSettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="?attr/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFontSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/font_size"
            android:textSize="?attr/text_heading_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle" />

        <RadioGroup
            android:id="@+id/rgFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFontSizeLabel">

            <RadioButton
                android:id="@+id/rbSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/rbMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/rbLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>