<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.accounts.AccountTypeAddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAccTypeAdd"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/top_big_margin"
                android:hint="@string/add_account_type"
                android:paddingStart="@dimen/padding_start_end"
                android:paddingEnd="@dimen/padding_start_end"
                app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chkAccTypeAddKeepTotals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_big_margin"
            android:text="@string/keep_totals"
            app:layout_constraintEnd_toStartOf="@id/chkAccTypeAddKeepOwing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAccTypeAdd" />

        <CheckBox
            android:id="@+id/chkAccTypeAddKeepOwing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_owing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chkAccTypeAddKeepTotals"
            app:layout_constraintTop_toTopOf="@+id/chkAccTypeAddKeepTotals" />

        <CheckBox
            android:id="@+id/chkAccTypeAddIsAsset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_big_margin"
            android:text="@string/asset_account"
            app:layout_constraintEnd_toStartOf="@id/chkAccTypeAddDisplayAsset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkAccTypeAddKeepTotals" />

        <CheckBox
            android:id="@+id/chkAccTypeAddDisplayAsset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_in_budget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chkAccTypeAddIsAsset"
            app:layout_constraintTop_toTopOf="@+id/chkAccTypeAddIsAsset" />

            <CheckBox
                android:id="@+id/chkAccTypeAddAllowPending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_transactions_pending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkAccTypeAddDisplayAsset" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>