<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/text_heading_size"
            app:layout_constraintEnd_toStartOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/text_heading_size"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tvDate"
            app:layout_constraintEnd_toStartOf="@id/tvAmount"
            app:layout_constraintStart_toEndOf="@id/tvDate" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_dollars"
            android:textSize="@dimen/text_heading_size"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tvDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvName" />

        <TextView
            android:id="@+id/tvToAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_account_name"
            android:textSize="@dimen/text_info_size"
            app:layout_constraintEnd_toStartOf="@id/tvFromAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvFromAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_margin_medium"
            android:text="@string/from_account_name"
            android:textSize="@dimen/text_info_size"
            app:layout_constraintBaseline_toBaselineOf="@id/tvToAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvToAccount" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>